# local-trace-visualizer

./: .mcp.json  INSTALLATION.md  README.md  pyproject.toml  pyrightconfig.json  serve.sh
.claude/: settings.json
.claude/hooks/: hook_models.py  process_hooks.py  test_process_hooks.py
.codex/: config.toml  hooks.json
.codex/hooks/: hook_models.py  process_hooks.py
hooks/: check_bash_post.py  check_bash_pre.py  check_edit.py  check_prompt.py  check_stop.py  check_webfetch.py  notification.py  notify_kokoro.py  test_check_bash_post.py  test_check_bash_pre.py  test_check_edit.py  test_check_prompt.py  test_check_stop.py
skills/kaggle/: SKILL.md
visualizer/: server.py  test_trace_parsers.py  trace_parsers.py
visualizer/static/: app.js  index.html  style.css
